# name: test_query_all_documents[date-None-None-2019-02-22]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'DateAnswer',
                    'date_value': '2019-02-22',
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[dynamic_choice-MyDataSource-5.5-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'StringAnswer',
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                    'string_value': '5.5',
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[dynamic_multiple_choice-MyDataSource-answer__value9-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'ListAnswer',
                    'list_value': <class 'list'> [
                      '5.5',
                    ],
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[file-None-some-file.pdf-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FileAnswer',
                    'fileValue': <class 'dict'> {
                      'downloadUrl': 'http://minio/download-url/09c697fb-fd0a-4345-bb9c-99df350b0cdb_some-file.pdf',
                      'metadata': <class 'dict'> {
                        'bucket_name': 'caluma-media',
                        'content_type': 'application/pdf',
                        'etag': '0c81da684e6aaef48e8f3113e5b8769b',
                        'is_dir': False,
                        'last_modified': <class 'struct_time'> (
                          2019,
                          4,
                          5,
                          7,
                          0,
                          49,
                          4,
                          95,
                          0,
                        ),
                        'metadata': <class 'dict'> {
                          'X-Amz-Meta-Testtag': 'super_file',
                        },
                        'object_name': 'some-file.pdf',
                        'size': 8200,
                      },
                      'name': 'some-file.pdf',
                    },
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[file-None-some-other-file.pdf-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FileAnswer',
                    'fileValue': <class 'dict'> {
                      'downloadUrl': 'http://minio/download-url/09c697fb-fd0a-4345-bb9c-99df350b0cdb_some-other-file.pdf',
                      'metadata': <class 'dict'> {
                        'bucket_name': 'caluma-media',
                        'content_type': 'application/pdf',
                        'etag': '0c81da684e6aaef48e8f3113e5b8769b',
                        'is_dir': False,
                        'last_modified': <class 'struct_time'> (
                          2019,
                          4,
                          5,
                          7,
                          0,
                          49,
                          4,
                          95,
                          0,
                        ),
                        'metadata': <class 'dict'> {
                          'X-Amz-Meta-Testtag': 'super_file',
                        },
                        'object_name': 'some-file.pdf',
                        'size': 8200,
                      },
                      'name': 'some-other-file.pdf',
                    },
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[float-None-2.1-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'FloatAnswer',
                    'float_value': 2.1,
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[integer-None-1-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'IntegerAnswer',
                    'integer_value': 1,
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[multiple_choice-None-answer__value3-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'ListAnswer',
                    'list_value': <class 'list'> [
                      'somevalue',
                      'anothervalue',
                    ],
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[table-None-None-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'TableAnswer',
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                    'table_value': <class 'list'> [
                      <class 'dict'> {
                        'form': <class 'dict'> {
                          'slug': 'effort-meet',
                        },
                      },
                    ],
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': '872d1b6f-790c-473c-b5e9-2e714d607695',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_documents[text-None-somevalue-None]
  <class 'dict'> {
    'allDocuments': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            'answers': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    '__typename': 'StringAnswer',
                    'question': <class 'dict'> {
                      'label': 'Thomas Johnson',
                      'slug': 'sound-air-mission',
                    },
                    'string_value': 'somevalue',
                  },
                },
              ],
              'totalCount': 1,
            },
            'createdByUser': 'b24d3781-2f59-44c4-8602-cffe6aa89ae7',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_save_document_answer[choice-question__configuration17-None-question__format_validators17-option-slug-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'option-slug',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[choice-question__configuration17-None-question__format_validators17-option-slug-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=choice), value='option-slug')
---
# name: test_save_document_answer[choice-question__configuration17-None-question__format_validators17-option-slug-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'option-slug',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[choice-question__configuration17-None-question__format_validators17-option-slug-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=choice), value='option-slug')
---
# name: test_save_document_answer[date-question__configuration7-None-question__format_validators7-None-2019-02-22-SaveDocumentDateAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentDateAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'DateAnswer',
        'dateValue': '2019-02-22',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[date-question__configuration7-None-question__format_validators7-None-2019-02-22-SaveDocumentDateAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=date), value=None)
---
# name: test_save_document_answer[date-question__configuration7-None-question__format_validators7-None-2019-02-22-SaveDocumentDateAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentDateAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'DateAnswer',
        'dateValue': '2019-02-22',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[date-question__configuration7-None-question__format_validators7-None-2019-02-22-SaveDocumentDateAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=date), value=None)
---
# name: test_save_document_answer[dynamic_choice-question__configuration21-MyDataSource-question__format_validators21-5.5-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': '5.5',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[dynamic_choice-question__configuration21-MyDataSource-question__format_validators21-5.5-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=dynamic_choice), value='5.5')
---
# name: test_save_document_answer[dynamic_choice-question__configuration21-MyDataSource-question__format_validators21-5.5-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': '5.5',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[dynamic_choice-question__configuration21-MyDataSource-question__format_validators21-5.5-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=dynamic_choice), value='5.5')
---
# name: test_save_document_answer[dynamic_multiple_choice-question__configuration19-MyDataSource-question__format_validators19-answer__value19-None-SaveDocumentListAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          '5.5',
          '1',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[dynamic_multiple_choice-question__configuration19-MyDataSource-question__format_validators19-answer__value19-None-SaveDocumentListAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=dynamic_multiple_choice), value=['5.5', '1'])
---
# name: test_save_document_answer[dynamic_multiple_choice-question__configuration19-MyDataSource-question__format_validators19-answer__value19-None-SaveDocumentListAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          '5.5',
          '1',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[dynamic_multiple_choice-question__configuration19-MyDataSource-question__format_validators19-answer__value19-None-SaveDocumentListAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=dynamic_multiple_choice), value=['5.5', '1'])
---
# name: test_save_document_answer[file-question__configuration10-None-question__format_validators10-not-exist.pdf-None-SaveDocumentFileAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentFileAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FileAnswer',
        'fileValue': <class 'dict'> {
          'name': 'not-exist.pdf',
          'uploadUrl': 'http://minio/upload-url',
        },
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[file-question__configuration10-None-question__format_validators10-not-exist.pdf-None-SaveDocumentFileAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=file), value=None)
---
# name: test_save_document_answer[file-question__configuration10-None-question__format_validators10-not-exist.pdf-None-SaveDocumentFileAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentFileAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FileAnswer',
        'fileValue': <class 'dict'> {
          'name': 'not-exist.pdf',
          'uploadUrl': 'http://minio/upload-url',
        },
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[file-question__configuration10-None-question__format_validators10-not-exist.pdf-None-SaveDocumentFileAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=file), value=None)
---
# name: test_save_document_answer[file-question__configuration9-None-question__format_validators9-some-file.pdf-None-SaveDocumentFileAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentFileAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FileAnswer',
        'fileValue': <class 'dict'> {
          'name': 'some-file.pdf',
          'uploadUrl': 'http://minio/upload-url',
        },
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[file-question__configuration9-None-question__format_validators9-some-file.pdf-None-SaveDocumentFileAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=file), value=None)
---
# name: test_save_document_answer[file-question__configuration9-None-question__format_validators9-some-file.pdf-None-SaveDocumentFileAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentFileAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FileAnswer',
        'fileValue': <class 'dict'> {
          'name': 'some-file.pdf',
          'uploadUrl': 'http://minio/upload-url',
        },
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[file-question__configuration9-None-question__format_validators9-some-file.pdf-None-SaveDocumentFileAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=file), value=None)
---
# name: test_save_document_answer[float-question__configuration2-None-question__format_validators2-2.1-None-SaveDocumentFloatAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentFloatAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FloatAnswer',
        'floatValue': 2.1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[float-question__configuration2-None-question__format_validators2-2.1-None-SaveDocumentFloatAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=float), value=2.1)
---
# name: test_save_document_answer[float-question__configuration2-None-question__format_validators2-2.1-None-SaveDocumentFloatAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentFloatAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FloatAnswer',
        'floatValue': 2.1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[float-question__configuration2-None-question__format_validators2-2.1-None-SaveDocumentFloatAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=float), value=2.1)
---
# name: test_save_document_answer[integer-question__configuration0-None-question__format_validators0-1-None-SaveDocumentIntegerAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentIntegerAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'IntegerAnswer',
        'integerValue': 1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[integer-question__configuration0-None-question__format_validators0-1-None-SaveDocumentIntegerAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=integer), value=1)
---
# name: test_save_document_answer[integer-question__configuration0-None-question__format_validators0-1-None-SaveDocumentIntegerAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentIntegerAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'IntegerAnswer',
        'integerValue': 1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[integer-question__configuration0-None-question__format_validators0-1-None-SaveDocumentIntegerAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=integer), value=1)
---
# name: test_save_document_answer[multiple_choice-question__configuration15-None-question__format_validators15-answer__value15-None-SaveDocumentListAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          'option-slug',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[multiple_choice-question__configuration15-None-question__format_validators15-answer__value15-None-SaveDocumentListAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=multiple_choice), value=['option-slug'])
---
# name: test_save_document_answer[multiple_choice-question__configuration15-None-question__format_validators15-answer__value15-None-SaveDocumentListAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          'option-slug',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[multiple_choice-question__configuration15-None-question__format_validators15-answer__value15-None-SaveDocumentListAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=multiple_choice), value=['option-slug'])
---
# name: test_save_document_answer[table-question__configuration12-None-question__format_validators12-None-None-SaveDocumentTableAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentTableAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'TableAnswer',
        'table_value': <class 'list'> [
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[table-question__configuration12-None-question__format_validators12-None-None-SaveDocumentTableAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=treatment-radio)), question=Question(slug=effort-meet, type=table), value=None)
---
# name: test_save_document_answer[table-question__configuration12-None-question__format_validators12-None-None-SaveDocumentTableAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentTableAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'TableAnswer',
        'table_value': <class 'list'> [
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[table-question__configuration12-None-question__format_validators12-None-None-SaveDocumentTableAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=treatment-radio)), question=Question(slug=effort-meet, type=table), value=None)
---
# name: test_save_document_answer[text-question__configuration24-None-question__format_validators24-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'test@example.com',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[text-question__configuration24-None-question__format_validators24-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=text), value='test@example.com')
---
# name: test_save_document_answer[text-question__configuration24-None-question__format_validators24-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'test@example.com',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[text-question__configuration24-None-question__format_validators24-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=text), value='test@example.com')
---
# name: test_save_document_answer[text-question__configuration4-None-question__format_validators4-Test-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[text-question__configuration4-None-question__format_validators4-Test-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=text), value='Test')
---
# name: test_save_document_answer[text-question__configuration4-None-question__format_validators4-Test-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[text-question__configuration4-None-question__format_validators4-Test-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=text), value='Test')
---
# name: test_save_document_answer[textarea-question__configuration13-None-question__format_validators13-Test-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[textarea-question__configuration13-None-question__format_validators13-Test-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=textarea), value='Test')
---
# name: test_save_document_answer[textarea-question__configuration13-None-question__format_validators13-Test-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[textarea-question__configuration13-None-question__format_validators13-Test-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=textarea), value='Test')
---
# name: test_save_document_answer[textarea-question__configuration26-None-question__format_validators26-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-False-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'test@example.com',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[textarea-question__configuration26-None-question__format_validators26-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-False-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=textarea), value='test@example.com')
---
# name: test_save_document_answer[textarea-question__configuration26-None-question__format_validators26-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-True-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'test@example.com',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_document_answer[textarea-question__configuration26-None-question__format_validators26-test@example.com-None-SaveDocumentStringAnswer-True-option-slug-True-True]
  Answer(document=Document(form=Form(slug=suggest-traditional)), question=Question(slug=effort-meet, type=textarea), value='test@example.com')
---
# name: test_save_document_answer_empty[text-false-None-False]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': None,
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_document_answer_empty[text-false-None-True]
  <class 'OrderedDict'> {
    'saveDocumentStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': None,
      },
      'clientMutationId': None,
    },
  }
---
